--- a/app/src/main/res/layout/each_item.xml
+++ b/app/src/main/res/layout/each_item.xml
@@ -3,20 +3,29 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:layout_gravity="fill_horizontal"
+    android:layout_marginTop="10dp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:cardCornerRadius="4dp"
+        app:cardBackgroundColor="@color/transparent"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginVertical="2dp"
         >
+<!--        app:cardBackgroundColor="#212121"-->
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal"
-            android:layout_margin="1dp"
+            android:layout_margin="10dp"
+            android:background="@drawable/shape"
+            android:gravity="center"
+            android:backgroundTint="@color/transparent"
             >
 
 
@@ -24,31 +33,32 @@
                 android:id="@+id/musicImage"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:layout_weight="1"
+
                 app:srcCompat="@android:drawable/btn_star_big_on" />
 
-            <!--            <ImageButton-->
-<!--                android:id="@+id/pauseButton"-->
-<!--                android:layout_width="50dp"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_weight="1"-->
-<!--                android:src="@android:drawable/ic_media_pause"-->
-<!--                android:contentDescription="TODO" />-->
 
             <TextView
                 android:id="@+id/musicTitle"
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_weight="3"
+                android:gravity="center"
+                android:textColor="@color/white"
                 android:text="TextView" />
 
             <ImageButton
                 android:id="@+id/toggleButton"
-                android:layout_width="50dp"
+                android:layout_width="2dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:background="#00E65100"
+                android:backgroundTint="#CA370A"
+                android:contentDescription="TODO"
+                android:gravity="center"
+                android:hapticFeedbackEnabled="true"
                 android:src="@android:drawable/ic_media_play"
-                android:contentDescription="TODO" />
+
+                />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
