--- a/app/src/main/res/layout/activity_song_player.xml
+++ b/app/src/main/res/layout/activity_song_player.xml
@@ -6,107 +6,107 @@
     android:layout_height="match_parent"
     android:background="@drawable/background_img"
     android:orientation="vertical"
-    android:weightSum="10"
-    tools:context=".activities.SongPlayerActivity">
+    android:weightSum="10">
+<!--    tools:context=".activities.SongPlayerActivity">-->
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="7"
-        android:gravity="center"
-        android:orientation="vertical">
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="0dp"-->
+<!--        android:layout_weight="7"-->
+<!--        android:gravity="center"-->
+<!--        android:orientation="vertical">-->
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/playerActivitySongName"
-            android:layout_margin="20dp"
-            android:ellipsize="marquee"
-            android:marqueeRepeatLimit="marquee_forever"
-            android:padding="10dp"
-            android:singleLine="true"
-            android:text="Song Name"
-            android:textColor="@color/white"
-            android:textSize="22sp"
-            android:textAlignment="center"
-            android:textStyle="italic"/>
-        <ImageView
-            android:layout_width="250dp"
-            android:layout_height="250dp"
-            android:id="@+id/playerActivitySongImage"
-            android:layout_marginBottom="8dp"
-            android:src="@drawable/music" />
+<!--        <TextView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:id="@+id/playerActivitySongName"-->
+<!--            android:layout_margin="20dp"-->
+<!--            android:ellipsize="marquee"-->
+<!--            android:marqueeRepeatLimit="marquee_forever"-->
+<!--            android:padding="10dp"-->
+<!--            android:singleLine="true"-->
+<!--            android:text="Song Name"-->
+<!--            android:textColor="@color/white"-->
+<!--            android:textSize="22sp"-->
+<!--            android:textAlignment="center"-->
+<!--            android:textStyle="italic"/>-->
+<!--        <ImageView-->
+<!--            android:layout_width="250dp"-->
+<!--            android:layout_height="250dp"-->
+<!--            android:id="@+id/playerActivitySongImage"-->
+<!--            android:layout_marginBottom="8dp"-->
+<!--            android:src="@drawable/music" />-->
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="60dp">
+<!--        <RelativeLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="60dp">-->
 
-            <SeekBar
-                android:layout_width="250dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/seekBar"
-                android:layout_centerInParent="true"
-                android:layout_alignParentBottom="true"
-                android:layout_margin="20dp"
-                android:layout_marginBottom="40dp" />
+<!--            <SeekBar-->
+<!--                android:layout_width="250dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:id="@+id/seekBar"-->
+<!--                android:layout_centerInParent="true"-->
+<!--                android:layout_alignParentBottom="true"-->
+<!--                android:layout_margin="20dp"-->
+<!--                android:layout_marginBottom="40dp" />-->
 
-            <TextView
-                android:id="@+id/playerActivityTxtStart"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="false"
-                android:layout_centerInParent="true"
-                android:layout_marginLeft="20dp"
-                android:layout_toLeftOf="@+id/seekBar"
-                android:text="00:00"
-                android:textColor="@color/white"
-                android:textSize="10sp" />
+<!--            <TextView-->
+<!--                android:id="@+id/playerActivityTxtStart"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_alignParentLeft="false"-->
+<!--                android:layout_centerInParent="true"-->
+<!--                android:layout_marginLeft="20dp"-->
+<!--                android:layout_toLeftOf="@+id/seekBar"-->
+<!--                android:text="00:00"-->
+<!--                android:textColor="@color/white"-->
+<!--                android:textSize="10sp" />-->
 
-            <TextView
-                android:id="@+id/playerActivityTxtStop"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="false"
-                android:layout_centerInParent="true"
-                android:layout_marginRight="20dp"
-                android:layout_toRightOf="@+id/seekBar"
-                android:textColor="@color/white"
-                android:textSize="10sp" />
-        </RelativeLayout>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="3">
+<!--            <TextView-->
+<!--                android:id="@+id/playerActivityTxtStop"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_alignParentRight="false"-->
+<!--                android:layout_centerInParent="true"-->
+<!--                android:layout_marginRight="20dp"-->
+<!--                android:layout_toRightOf="@+id/seekBar"-->
+<!--                android:textColor="@color/white"-->
+<!--                android:textSize="10sp" />-->
+<!--        </RelativeLayout>-->
+<!--    </LinearLayout>-->
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="0dp"-->
+<!--        android:layout_weight="3">-->
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+<!--        <RelativeLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent">-->
 
-            <Button
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:id="@+id/playButton"
-                android:layout_centerHorizontal="true"
-                android:background="@drawable/ic_pause_24"/>
+<!--            <Button-->
+<!--                android:layout_width="70dp"-->
+<!--                android:layout_height="70dp"-->
+<!--                android:id="@+id/playButton"-->
+<!--                android:layout_centerHorizontal="true"-->
+<!--                android:background="@drawable/ic_pause_24"/>-->
 
-            <Button
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:id="@+id/nextButton"
-                android:layout_toRightOf="@+id/playButton"
-                android:layout_marginTop="15dp"
-                android:background="@drawable/ic_skip_next_24"/>
+<!--            <Button-->
+<!--                android:layout_width="50dp"-->
+<!--                android:layout_height="50dp"-->
+<!--                android:id="@+id/nextButton"-->
+<!--                android:layout_toRightOf="@+id/playButton"-->
+<!--                android:layout_marginTop="15dp"-->
+<!--                android:background="@drawable/ic_skip_next_24"/>-->
 
-            <Button
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:id="@+id/prevButton"
-                android:layout_toLeftOf="@+id/playButton"
-                android:layout_marginTop="15dp"
-                android:background="@drawable/ic_skip_previous_24"/>
+<!--            <Button-->
+<!--                android:layout_width="50dp"-->
+<!--                android:layout_height="50dp"-->
+<!--                android:id="@+id/prevButton"-->
+<!--                android:layout_toLeftOf="@+id/playButton"-->
+<!--                android:layout_marginTop="15dp"-->
+<!--                android:background="@drawable/ic_skip_previous_24"/>-->
 
-        </RelativeLayout>
-    </LinearLayout>
+<!--        </RelativeLayout>-->
+<!--    </LinearLayout>-->
 
 </LinearLayout>
