--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,8 +6,31 @@
     android:background="#424242"
     >
 
-    <EditText
-        android:id="@+id/editTextSearch"
+<!--    <EditText-->
+<!--        android:id="@+id/editTextSearch"-->
+<!--        android:layout_width="335dp"-->
+<!--        android:layout_height="41dp"-->
+<!--        android:layout_alignParentStart="true"-->
+<!--        android:layout_alignParentTop="true"-->
+<!--        android:layout_alignParentEnd="true"-->
+<!--        android:layout_marginStart="40dp"-->
+<!--        android:layout_marginTop="17dp"-->
+<!--        android:layout_marginEnd="36dp"-->
+<!--        android:background="@drawable/rounded_border"-->
+<!--        android:drawablePadding="8dp"-->
+<!--        android:gravity="center"-->
+<!--        android:hint="Search"-->
+<!--        android:imeOptions="actionSearch"-->
+<!--        android:inputType="text"-->
+<!--        android:paddingStart="8dp"-->
+<!--        android:paddingEnd="8dp"-->
+<!--        android:singleLine="true"-->
+<!--        android:textColor="#FFFFFF"-->
+<!--        android:textColorHint="#FFFFFF"-->
+<!--        android:layout_marginBottom="30dp"/>-->
+
+    <AutoCompleteTextView
+        android:id="@+id/autoCompleteTextView"
         android:layout_width="335dp"
         android:layout_height="41dp"
         android:layout_alignParentStart="true"
@@ -33,22 +56,22 @@
         android:id="@+id/imageView"
         android:layout_width="56dp"
         android:layout_height="24dp"
-        android:layout_alignStart="@+id/editTextSearch"
-        android:layout_alignTop="@+id/editTextSearch"
-        android:layout_alignEnd="@+id/editTextSearch"
-        android:layout_alignBottom="@+id/editTextSearch"
-        android:layout_marginStart="13dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="266dp"
-        android:layout_marginBottom="7dp"
+        android:layout_alignStart="@+id/autoCompleteTextView"
+        android:layout_alignTop="@+id/autoCompleteTextView"
+        android:layout_alignEnd="@+id/autoCompleteTextView"
+        android:layout_alignBottom="@+id/autoCompleteTextView"
+        android:layout_marginStart="31dp"
+        android:layout_marginTop="7dp"
+        android:layout_marginEnd="248dp"
+        android:layout_marginBottom="10dp"
         app:srcCompat="@android:drawable/ic_menu_search" />
 
 
-    <androidx.recyclerview.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/editTextSearch"
+        android:layout_below="@+id/autoCompleteTextView"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
