--- a/app/src/main/res/layout/activity_song_player.xml
+++ b/app/src/main/res/layout/activity_song_player.xml
@@ -40,6 +40,8 @@
             android:id="@+id/artistName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
             android:layout_below="@id/playerActivitySongName"
             android:layout_marginTop="4dp"
             android:text=""
