--- a/app/src/main/res/layout/song_item_library.xml
+++ b/app/src/main/res/layout/song_item_library.xml
@@ -29,21 +29,6 @@
         android:textSize="16sp"
         android:textStyle="bold"/>
 
-    <com.makeramen.roundedimageview.RoundedImageView
-        android:id="@+id/image"
-        app:layout_constraintStart_toEndOf="@id/number"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginEnd="10dp"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
-        android:scaleType="centerInside"
-        android:padding="6dp"
-        app:riv_corner_radius="4dp"
-        tools:src="@drawable/ic_music_style"
-        app:riv_border_width="1dp"
-        app:riv_border_color="#44F5F5F5"/>
-
     <TextView
         android:id="@+id/songName"
         android:maxLines="1"
@@ -60,13 +45,25 @@
         android:textSize="15sp"
         tools:text="Galaxy Supernova"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@id/image"
-        app:layout_constraintEnd_toStartOf="@id/guidelinePauseEnd"
+        app:layout_constraintStart_toEndOf="@id/number"
+        app:layout_constraintEnd_toStartOf="@id/quick_play_pause"
         app:layout_constraintBottom_toTopOf="@id/description"
-        app:layout_constraintVertical_chainStyle="packed"
         app:layout_constraintHorizontal_chainStyle="packed"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"/>
+
+    <ImageView
+        android:id="@+id/quick_play_pause"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:padding="11dp"
+        app:layout_constraintStart_toEndOf="@id/songName"
+        app:layout_constraintTop_toTopOf="@id/songName"
+        app:layout_constraintBottom_toBottomOf="@id/songName"
+        app:layout_constraintEnd_toStartOf="@id/menu_button"
+        tools:src="@drawable/ic_volume_up_black_24dp"
+        tools:visibility="gone"
+        app:tint="@color/FlatWhite" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelinePauseEnd"
@@ -104,7 +101,7 @@
             android:id="@+id/preview_button"
             android:layout_width="45dp"
             android:layout_height="45dp"
-            android:src="@drawable/ic_pause_24"
+            android:src="@drawable/round_play_circle_24"
             app:tint="@color/FlatWhite"
             android:background="@drawable/ripple_oval"
             android:alpha="0.9"/>
@@ -132,17 +129,4 @@
         android:scaleType="centerInside"
         android:background="@drawable/ripple_oval"
         app:tint="#DDF5F5F5" />
-
-    <ImageView
-        android:id="@+id/quick_play_pause"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:padding="11dp"
-        app:layout_constraintStart_toStartOf="@id/image"
-        app:layout_constraintTop_toTopOf="@id/image"
-        app:layout_constraintBottom_toBottomOf="@id/image"
-        app:layout_constraintEnd_toEndOf="@id/image"
-        tools:src="@drawable/ic_volume_up_black_24dp"
-        tools:visibility="gone"
-        app:tint="@color/FlatWhite" />
 </androidx.constraintlayout.widget.ConstraintLayout>
