--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,13 @@
         android:orientation="vertical"
         tools:context=".MainActivity">
 
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/horizontalRecyclerView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scrollbars="horizontal"/>
+
 <!--        <ImageView-->
 <!--            android:id="@+id/albumImageView"-->
 <!--            android:layout_width="wrap_content"-->
@@ -59,12 +66,12 @@
 <!--            android:layout_marginBottom="8dp"-->
 <!--            tools:ignore="NotSibling" />-->
 
-        <ListView
-            android:id="@+id/listView"
-            android:layout_width="227dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            tools:ignore="NotSibling" />
+<!--        <ListView-->
+<!--            android:id="@+id/listView"-->
+<!--            android:layout_width="227dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_margin="8dp"-->
+<!--            tools:ignore="NotSibling" />-->
     </LinearLayout>
 
 
