--- a/app/src/main/res/layout/activity_playlists.xml
+++ b/app/src/main/res/layout/activity_playlists.xml
@@ -5,14 +5,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/backward_color"
-    tools:context=".ListsActivity">
+    android:background="@drawable/allsongsoverly"
+    tools:context=".PlaylistsActivity">
 
+    <!--Playlists Text-->
     <TextView
-        android:id="@+id/titleTextView"
+        android:id="@+id/playlistTitleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Library"
+        android:text="Playlists"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -21,50 +22,60 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp" />
 
-    <EditText
-        android:id="@+id/searchEditText"
+    <!--SearchBar-->
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/searchTextInputLayoutPlaylists"
         android:layout_width="0dp"
-        android:layout_height="48dp"
+        android:layout_height="56dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="32dp"
-        android:background="@drawable/rounded_border"
-        android:drawableStart="@drawable/ic_action_search"
-        android:drawablePadding="8dp"
-        android:hint="Search"
-        android:imeOptions="actionSearch"
-        android:inputType="text"
-        android:paddingStart="8dp"
-        android:paddingEnd="8dp"
-        android:singleLine="true"
-        android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/titleTextView" />
+        app:endIconMode="clear_text"
+        app:hintEnabled="false"
+        app:boxBackgroundMode="outline"
+        app:layout_constraintTop_toBottomOf="@id/playlistTitleTextView">
 
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/searchEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/rounded_border"
+            android:drawableStart="@drawable/ic_action_search"
+            android:drawablePadding="8dp"
+            android:hint="Search"
+            android:imeOptions="actionSearch"
+            android:inputType="text"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:singleLine="true"
+            android:textColor="#FFFFFF"
+            android:textColorHint="#FFFFFF" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <!--Songs/Playlist NavBar-->
     <RadioGroup
-        android:id="@+id/navigationBar"
+        android:id="@+id/navigationBarPlaylist"
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:background="@android:color/transparent"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/searchEditText">
+        app:layout_constraintTop_toBottomOf="@id/searchTextInputLayoutPlaylists">
 
         <RadioButton
             android:id="@+id/songsButton"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:button="@android:color/transparent"
             android:background="@android:color/transparent"
+            android:button="@android:color/transparent"
             android:gravity="center"
             android:text="Songs"
             android:textColor="#FFFFFF"
@@ -75,8 +86,8 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:button="@android:color/transparent"
             android:background="@android:color/transparent"
+            android:button="@android:color/transparent"
             android:gravity="center"
             android:text="Playlists"
             android:textColor="#FFFFFF"
@@ -99,4 +110,15 @@
         app:tint="@color/FlatWhite"
         tools:ignore="MissingConstraints" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/playlistsRecycleView"
+        android:layout_width="121dp"
+        android:layout_height="87dp"
+        android:layout_marginTop="180dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.462"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/navigationBarPlaylist" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
+
