--- a/app/src/main/res/layout/song_item_library.xml
+++ b/app/src/main/res/layout/song_item_library.xml
@@ -104,6 +104,7 @@
             android:src="@drawable/round_play_circle_24"
             app:tint="@color/FlatWhite"
             android:background="@drawable/ripple_oval"
+            android:clickable="true"
             android:alpha="0.9"/>
 
         <ProgressBar
