--- a/app/src/main/res/layout/horizontal_each_item.xml
+++ b/app/src/main/res/layout/horizontal_each_item.xml
@@ -2,7 +2,11 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="150dp"
-    android:layout_height="150dp">
+    android:layout_height="150dp"
+    app:cardCornerRadius="4dp"
+    android:layout_marginTop="20dp"
+    android:layout_marginRight="10dp"
+    android:layout_marginLeft="10dp">
 
 <RelativeLayout
     android:layout_width="match_parent"
@@ -11,23 +15,25 @@
     <ImageView
         android:id="@+id/HRImageViewRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        app:srcCompat="@android:drawable/btn_star_big_on" />
+        app:srcCompat="@android:drawable/btn_star_big_on"
 
-    <TextView
-        android:id="@+id/HRAlbumTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="This is text"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:gravity="center"
-        android:textSize="@dimen/_16dp"
-        android:textStyle="bold"
-        android:background="#8C8A8A"
         />
+
+<!--    <TextView-->
+<!--        android:id="@+id/HRAlbumTitle"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="This is text"-->
+<!--        android:layout_alignParentBottom="true"-->
+<!--        android:layout_alignParentStart="true"-->
+<!--        android:layout_alignParentEnd="true"-->
+<!--        android:gravity="center"-->
+<!--        android:textSize="@dimen/_16dp"-->
+<!--        android:textStyle="bold"-->
+<!--        android:background="#8C8A8A"-->
+<!--        />-->
 
 </RelativeLayout>
 
