finished main activity displayed albums and tracks with design

--- a/app/src/main/res/layout/horizontal_each_item.xml
+++ b/app/src/main/res/layout/horizontal_each_item.xml
@@ -4,6 +4,7 @@
     android:layout_width="150dp"
     android:layout_height="150dp"
     app:cardCornerRadius="4dp"
+    android:layout_alignParentStart="false"
     android:layout_marginTop="20dp"
     android:layout_marginRight="10dp"
     android:layout_marginLeft="10dp">
@@ -12,8 +13,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/HRImageViewRecyclerView"
+    <ImageButton
+        android:id="@+id/HRImageButtonRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
