--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -61,7 +61,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="veirfication code"
+        android:hint="verification code"
         android:inputType="text"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
