--- a/app/src/main/res/layout/activity_log_in_page.xml
+++ b/app/src/main/res/layout/activity_log_in_page.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#000000"
     tools:context=".Log_In_Page">
 
     <ImageView
@@ -29,9 +30,11 @@
         android:layout_marginTop="69dp"
         android:layout_marginEnd="1dp"
         android:hint="Email"
+        android:textColorHint="#FFFFFF"
         app:boxBackgroundMode="outline"
         app:boxStrokeColor="#FC00F0"
         app:endIconMode="clear_text"
+        app:hintTextColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2"
@@ -42,7 +45,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/buttons"
-            android:inputType="textEmailAddress" />
+            android:inputType="textEmailAddress"
+            android:textColor="#FFFFFF"
+            android:textColorHighlight="#F8F6F6"
+            android:textColorHint="#FFFFFF" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -54,6 +60,7 @@
         android:layout_marginTop="69dp"
         android:layout_marginEnd="36dp"
         android:hint="Password"
+        android:textColorHint="#FFFFFF"
         app:boxBackgroundMode="outline"
         app:boxStrokeColor="#FC00F0"
         app:endIconMode="password_toggle"
@@ -79,6 +86,7 @@
         android:layout_marginBottom="44dp"
         android:text="Don't have an account?  "
 
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/textView5"
         app:layout_constraintHorizontal_bias="0.5"
@@ -90,8 +98,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="44dp"
-        android:text="Sing up"
-        android:textColor="#EC00F9"
+        android:text="Sign up"
+        android:textColor="#F20CFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -101,17 +109,16 @@
         android:id="@+id/button5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="162dp"
-        android:layout_marginTop="67dp"
-        android:layout_marginEnd="159dp"
 
-        android:text="Button"
+        android:layout_marginStart="160dp"
+        android:layout_marginTop="62dp"
+        android:layout_marginEnd="161dp"
+        android:layout_marginBottom="62dp"
+        android:text="sign in"
         app:layout_constraintBottom_toTopOf="@+id/textView4"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
